[build-system]
requires = [
    "hatchling>=1.27.0",
]
build-backend = "hatchling.build"

[project]
name = "xemu-perf-renderer"
dynamic = ["version"]
description = 'Benchmark result renderer for xemu-perf-tester'
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["xemu", "xbox"]
authors = [
    { name = "Erik Abair", email = "erik.abair@bearbrains.work" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Jinja2~=3.1.6",
]

[project.urls]
Documentation = "https://github.com/abaire/xemu-perf-tester_results#readme"
Issues = "https://github.com/abaire/xemu-perf-tester_results/issues"
Source = "https://github.com/abaire/xemu-perf-tester_results"

[project.scripts]
xemu-perf-render = "xemu_perf_renderer:render"

[tool.hatch.version]
path = "src/xemu_perf_renderer/__about__.py"

[tool.hatch.envs.types]
type = "virtual"
path = ".venv-mypy"
extra-dependencies = [
    "mypy>=1.14.1",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/xemu_perf_renderer}"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]

[tool.coverage.run]
source_pkgs = ["xemu_perf_renderer"]
branch = true
parallel = true
omit = [
    "src/xemu_perf_renderer/__about__.py",
]

[tool.coverage.paths]
xemu-perf-renderer = ["src/xemu_perf_renderer", "*/nv2a-vsh/src/xemu_perf_renderer"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "README-maintainer.md"
]
include = [
    "src/xemu_perf_renderer/templates"
]

[tool.hatch.envs.default]
type = "virtual"
path = "venv"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.hatch.envs.hatch-test]
type = "virtual"
path = "venv"
extra-dependencies = [
    "pytest",
]
